# nanoGPT

./: pyproject.toml  train.py
